# quantum-lab

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md
.cargo/: config.toml
.claude/: settings.json
.claude/hooks/: validate-vue-logic.sh  validate-vue.sh
.claude/rules/: frontend.md
.github/workflows/: ci.yml
crates/qcircuit/: Cargo.toml
crates/qcircuit/src/: lib.rs
crates/qlab/: Cargo.toml
crates/qlab/src/: main.rs
crates/qsv/: Cargo.toml
crates/qsv-wasm/: Cargo.toml
crates/qsv-wasm/src/: lib.rs
crates/qsv/src/: lib.rs  qubit.rs
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.vue  main.ts  style.css
web/src/models/: index.ts
web/src/modules/sim/: index.ts
web/src/state/: index.ts
web/src/views/: index.ts
