[package]
name = "qcircuit"
description = "Quantum circuit representation, gate definitions, and builder API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
qsv = { workspace = true }
num-complex = { workspace = true }
