[package]
name = "qsv"
description = "Dense state-vector quantum simulator, built from first principles"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
num-complex = { workspace = true }
rand = { workspace = true }
